--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,9 @@ perl:
   - 5.16
   - 5.18
 
+before_install:
+  cpanm -n Devel::Cover::Report::Coveralls
+script:
+  perl Build.PL && ./Build build && cover -test
+after_success:
+  cover -report coveralls
